# pybind_embed_test

./: .gitignore  CMakeLists.txt  Factory.h  ModelComponent.h  README.md  SimpleBoostDecayComponent.cpp  SimpleBoostDecayComponent.h  config.py  main.cpp  modules.cpp  setup.py
binder/: all_cmake_includes.hpp  config.cfg  make_bindings.py
core/: CMakeLists.txt  ModelComponent.h  ModelComponentFactory.cpp  ModelComponentFactory.h  ParamSet.h
model/: CMakeLists.txt  ModelComponent.cpp  ModelComponent.h  ModelComponentFactory.cpp  ModelComponentFactory.h  SimpleBoostDecayComponent.cpp  SimpleBoostDecayComponent.h
plugins/: CMakeLists.txt  PluginComponent.cpp  PluginComponent.h
src/model/: CMakeLists.txt  IModelComponent.h  SimpleBoostDecayComponent.cpp  SimpleBoostDecayComponent.h
test/: test_bindings.py
tests/: CMakeLists.txt  test_model_component.cpp
